Add project references

--- a/src/Yungching.API/Yungching.API.csproj
+++ b/src/Yungching.API/Yungching.API.csproj
@@ -14,4 +14,10 @@
     <Folder Include="Controllers/" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Yungching.Domain\Yungching.Domain.csproj" />
+    <ProjectReference Include="..\Yungching.Application\Yungching.Application.csproj" />
+    <ProjectReference Include="..\Yungching.Infrastructure\Yungching.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
