--- a/src/Yungching.Infrastructure/Yungching.Infrastructure.csproj
+++ b/src/Yungching.Infrastructure/Yungching.Infrastructure.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Yungching.Domain\Yungching.Domain.csproj" />
+    <ProjectReference Include="..\Yungching.Application\Yungching.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
