--- a/src/Yungching.API/appsettings.json
+++ b/src/Yungching.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,14330;Database=Northwind;User Id=sa;Password=Aa1108168*;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  }
 }
