--- a/src/Yungching.Infrastructure/Yungching.Infrastructure.csproj
+++ b/src/Yungching.Infrastructure/Yungching.Infrastructure.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\Yungching.Application\Yungching.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
