--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: yungching-api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=Northwind,1433;Database=Northwind;User Id=sa;Password=Aa1108168*;TrustServerCertificate=true;MultipleActiveResultSets=true
+      - ConnectionStrings__DefaultConnection=Server=Northwind,1433;Database=Northwind;User Id=sa;Password=Mypassword*;TrustServerCertificate=true;MultipleActiveResultSets=true
     ports:
       - "8081:80"
     networks:
