--- a/src/Yungching.API/appsettings.json
+++ b/src/Yungching.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,14330;Database=Northwind;User Id=sa;Password=Aa1108168*;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost,14330;Database=Northwind;User Id=sa;Password=Mypassword*;TrustServerCertificate=true;MultipleActiveResultSets=true"
   }
 }
